Added university class and teacher admin dashboard

--- a/poli-meets-ui/src/app/components/dialog/admin/category-admin-dialog/category-admin-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/admin/category-admin-dialog/category-admin-dialog.component.html
@@ -1,6 +1,7 @@
 <mat-dialog-content class="admin-dialog">
     <div class="dialog-header">
-        <p>Add Feedback Category</p>
+        <p *ngIf="!isEdit">Add Feedback Category</p>
+        <p *ngIf="isEdit">Edit Feedback Category</p>
         <span>* required fields</span>
     </div>
 
