--- a/poli-meets-ui/src/app/components/dialog/admin/university-year-admin-dialog/university-year-admin-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/admin/university-year-admin-dialog/university-year-admin-dialog.component.html
@@ -1,6 +1,7 @@
 <mat-dialog-content class="admin-dialog">
     <div class="dialog-header">
-        <p>Add university year</p>
+        <p *ngIf="!isEdit">Add university year</p>
+        <p *ngIf="isEdit">Edit university year</p>
         <span>* required fields</span>
     </div>
 
