--- a/poli-meets-ui/src/app/components/admin/admin.component.html
+++ b/poli-meets-ui/src/app/components/admin/admin.component.html
@@ -150,8 +150,9 @@
                             </th>
                             <td mat-cell *matCellDef="let element">
                                 <div class="actions">
-                                    <mat-icon matTooltip="Edit entry" color="primary">edit</mat-icon>
-                                    <mat-icon matTooltip="Delete entry" color="primary">delete_outline</mat-icon>
+                                    <mat-icon matTooltip="Edit entry" color="primary"
+                                        (click)="openUniversityClassDialog(element)">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary" (click)="openUniversityClassDeleteDialog(element)">delete_outline</mat-icon>
                                 </div>
                             </td>
                         </ng-container>
@@ -164,6 +165,14 @@
 
             <mat-tab label="Teacher">
                 <div class="padding-tab">
+                    <div class="search">
+                        <mat-label>Search</mat-label>
+                        <mat-form-field appearance="fill">
+                            <input matInput (keyup)="filterTeachers($event)">
+                            <mat-icon matSuffix>search</mat-icon>
+                        </mat-form-field>
+                    </div>
+
                     <table mat-table [dataSource]="teachers" matSort class="teacher">
 
                         <ng-container matColumnDef="firstName">
@@ -182,8 +191,10 @@
                             </th>
                             <td mat-cell *matCellDef="let element">
                                 <div class="actions">
-                                    <mat-icon matTooltip="Edit entry" color="primary">edit</mat-icon>
-                                    <mat-icon matTooltip="Delete entry" color="primary">delete_outline</mat-icon>
+                                    <mat-icon matTooltip="Edit entry" color="primary"
+                                        (click)="openTeacherDialog(element)">edit</mat-icon>
+                                    <mat-icon matTooltip="Delete entry" color="primary"
+                                        (click)="openTeacherDeleteDialog(element)">delete_outline</mat-icon>
                                 </div>
                             </td>
                         </ng-container>
@@ -221,9 +232,9 @@
                                 <div class="actions">
                                     <div class="actions">
                                         <mat-icon matTooltip="Edit entry" color="primary"
-                                                  (click)="openCategoryDialog(element)">edit</mat-icon>
+                                            (click)="openCategoryDialog(element)">edit</mat-icon>
                                         <mat-icon matTooltip="Delete entry" color="primary"
-                                                  (click)="openCategoryDeleteDialog(element)">delete_outline</mat-icon>
+                                            (click)="openCategoryDeleteDialog(element)">delete_outline</mat-icon>
                                     </div>
                                 </div>
                             </td>
