--- a/poli-meets-ui/src/app/components/auth/register/register.component.scss
+++ b/poli-meets-ui/src/app/components/auth/register/register.component.scss
@@ -115,7 +115,7 @@
     }
 }
 
-a[routerLink] {
+.register-card-container a[routerLink] {
     text-decoration: none;
     color: inherit;
     font-weight: inherit;
