--- a/poli-meets-ui/src/app/components/dialog/confirmation-dialog/confirmation-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{dialogTitle}}</h2>
 
-<mat-dialog-content>
+<mat-dialog-content class="confirmation-dialog">
     {{dialogMessage}}
 
     <p *ngIf="dialogSubMessage" [innerHTML]="dialogSubMessage" class="dialog-confirmation-submessage"></p>
