--- a/poli-meets-ui/src/app/components/dialog/confirmation-dialog/confirmation-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/confirmation-dialog/confirmation-dialog.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../font_colors";
 
-.mat-mdc-dialog-container {
-    max-width: 50vw;
+.mat-mdc-dialog-content.mdc-dialog__content.confirmation-dialog {
+    max-width: 40vw;
 }
 
 .mat-mdc-dialog-container .mdc-dialog__title {
