--- a/poli-meets-ui/src/app/components/admin/admin.component.html
+++ b/poli-meets-ui/src/app/components/admin/admin.component.html
@@ -128,10 +128,9 @@
                             <td mat-cell *matCellDef="let element"> {{element.description}} </td>
                         </ng-container>
 
-                        <ng-container matColumnDef="teacher">
+                        <ng-container matColumnDef="teacherName">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Teacher </th>
-                            <td mat-cell *matCellDef="let element"> {{element.teacher.firstName}}
-                                {{element.teacher.lastName}}</td>
+                            <td mat-cell *matCellDef="let element"> {{element.teacherName}}</td>
                         </ng-container>
 
                         <ng-container matColumnDef="universityYear">
