--- a/poli-meets-ui/src/app/components/auth/login/login.component.scss
+++ b/poli-meets-ui/src/app/components/auth/login/login.component.scss
@@ -105,7 +105,7 @@
     }
 }
 
-a[routerLink] {
+.login-card-container a[routerLink] {
     text-decoration: none;
     color: inherit;
     font-weight: inherit;
