--- a/poli-meets-ui/src/app/components/mentorship/mentorship-header.scss
+++ b/poli-meets-ui/src/app/components/mentorship/mentorship-header.scss
@@ -159,7 +159,7 @@
 
 .meeting-overview {
     width: 100%;
-    height: 60px;
+    min-height: 60px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 4px;
     border-radius: 16px;
     display: flex;
@@ -214,7 +214,7 @@
             img {
                 height: 40px;
                 width: 40px;
-                object-fit: cover;
+                object-fit: contain;
             }
         }
 
