--- a/poli-meets-ui/src/app/components/home/home.component.html
+++ b/poli-meets-ui/src/app/components/home/home.component.html
@@ -29,7 +29,13 @@
             <div class="card-image">
                 <img mat-card-image src="assets/images/icons/mentorship.png">
                 <div class="overlay">
-                    <p>Lorem ipsum ceva ana are mere si pere si fructe etc</p>
+                    <p>This functionality consists of a tutoring platform, with the main purpose of
+                    increasing social interaction between students and promoting an environment where students of the same faculty are
+                    encouraged to help each other.
+                    <br><br><br>
+                    The platform gives the possibility to students with pedagogical inclinations to offer punctual help to
+                    those who encounter difficulties in understanding certain subjects within the faculty by planning mentoring
+                    sessions.</p>
                 </div>
             </div>
 
@@ -50,7 +56,11 @@
         <mat-card class="action-card">
             <div class="card-image">
                 <img mat-card-image src="assets/images/icons/feedback.png">
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <p>Within the PoliMeets application, this functionality implements a form of student transparent feedback, being an improved alternative to the classic Feedback Forms on Moodle.
+                    <br><br><br>
+                    The collection of feedback within the platform aims to improve the teaching activities while also offering students the possibility to view and offer feedback for their upcoming subjects.</p>
+                </div>
             </div>
 
             <mat-card-header>
