--- a/poli-meets-ui/src/app/components/mentorship/pending-requests/pending-requests.component.html
+++ b/poli-meets-ui/src/app/components/mentorship/pending-requests/pending-requests.component.html
@@ -1,5 +1,7 @@
 <div class="mentorship-container-padding">
+
     <div class="mentorship-container">
+        
         <mat-card class="mentorship-action-card">
             <div class="primary-content">
                 <p>{{getNumPendingRequests()}} pending requests</p>
@@ -13,8 +15,7 @@
                 <div class="left-section" routerLink="/mentorship/mentors">
                     <p>{{numMentors}} mentors available</p>
                 </div>
-                <!-- TODO: redirect to contact page when it will exist -->
-                <div class="right-section" routerLink="/home">
+                <div class="right-section" routerLink="/contact">
                     <p>Get help</p>
                 </div>
             </div>
