--- a/poli-meets-ui/src/app/components/mentorship/mentors/mentors.component.html
+++ b/poli-meets-ui/src/app/components/mentorship/mentors/mentors.component.html
@@ -47,8 +47,10 @@
         <mat-divider class="sections-divider"></mat-divider>
 
         <div class="mentors-cards">
-            <div class="mentors-cards-inner">
-                <div class="mentor-card" *ngFor="let mentor of filteredMentors">
+            <mat-spinner *ngIf="isLoading" diameter="25"></mat-spinner>
+
+            <div class="mentors-cards-inner" *ngIf="!isLoading">
+                <div class="mentor-card" *ngFor="let mentor of filteredMentors" data-aos="fade-in" data-aos-duration="300" data-aos-easing="ease-out-squad">
                     <div class="profile">
                         <div class="profile-photo">
                             <img [src]="getImage(mentor)">
