--- a/poli-meets-ui/src/app/components/mentorship/mentors/mentors.component.scss
+++ b/poli-meets-ui/src/app/components/mentorship/mentors/mentors.component.scss
@@ -149,6 +149,8 @@
     width: 75%;
     padding: 32px 32px 64px;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
 
     .mentor-card {
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
